--- a/artifacts/Adaptive Framework/demandboard_items_list_approver.json
+++ b/artifacts/Adaptive Framework/demandboard_items_list_approver.json
@@ -6,16 +6,22 @@
 		"properties": {
 			"report": {
 				"showIcon": true,
+				"iconButtonClose": "",
 				"textButtonClose": "Close",
 				"typeButtonClose": "Attention",
+				"iconButtonCreate": "",
 				"textButtonCreate": "Create",
 				"typeButtonCreate": "Emphasized",
 				"iconButtonExport": "sap-icon://excel-attachment",
+				"textButtonExport": "",
 				"typeButtonExport": "Transparent",
 				"iconButtonImport": "sap-icon://fa-solid/file-import",
+				"textButtonImport": "",
 				"typeButtonImport": "Transparent",
+				"iconButtonMultiSelect": "",
 				"textButtonMultiSelect": "MultiSelect",
 				"typeButtonMultiSelect": "Emphasized",
+				"iconButtonRun": "",
 				"textButtonRun": "Update",
 				"typeButtonRun": "Emphasized",
 				"enableRun": true,
@@ -30,6 +36,7 @@
 				"autoRun": true,
 				"autoRunFocus": true,
 				"searchLabel": "Search",
+				"searchPlaceholder": "",
 				"title": "Demand Board",
 				"subTitle": "Approve or Reject demand items",
 				"avatarIcon": "sap-icon://request",
@@ -41,6 +48,7 @@
 					"keyField": [
 						{
 							"fieldName": "Status",
+							"key": "",
 							"value": "New Demand"
 						}
 					]
@@ -50,6 +58,7 @@
 					"openAs": "D",
 					"butType": "Accept",
 					"destinationTargetF": "f04b7ef3-68d6-423d-9f39-66d327c2b315",
+					"keyField": [],
 					"dialogHeight": "900px",
 					"dialogWidth": "1440px",
 					"dialogHeader": true,
@@ -67,8 +76,11 @@
 				"enablePagination": true,
 				"paginationShowSelection": true,
 				"paginationRows": "15",
+				"action1Text": "",
 				"action1Type": "Transparent",
+				"action2Text": "",
 				"action2Type": "Transparent",
+				"action3Text": "",
 				"action3Type": "Transparent",
 				"showSeparators": "All",
 				"alternateRowColors": true,
@@ -218,7 +230,9 @@
 				"name": "Product",
 				"text": "Product",
 				"fieldPos": 5,
-				"wrapping": true
+				"width": "",
+				"wrapping": true,
+				"vAlign": ""
 			},
 			{
 				"enableFilter": true,
@@ -227,7 +241,8 @@
 				"name": "Category",
 				"text": "Category",
 				"fieldPos": 6,
-				"enableGroup": true
+				"enableGroup": true,
+				"vAlign": ""
 			},
 			{
 				"enableFilter": true,
@@ -236,7 +251,8 @@
 				"name": "TimePeriod",
 				"text": "Time Period",
 				"fieldPos": 7,
-				"wrapping": true
+				"wrapping": true,
+				"vAlign": ""
 			},
 			{
 				"enableFilter": true,
@@ -245,6 +261,7 @@
 				"name": "StartDate",
 				"text": "Start Date",
 				"fieldPos": 8,
+				"vAlign": "",
 				"formatter": "date01"
 			},
 			{
@@ -265,7 +282,9 @@
 				"name": "Quantity",
 				"text": "Quantity",
 				"fieldPos": 10,
-				"hAlign": "End"
+				"hAlign": "End",
+				"width": "",
+				"vAlign": ""
 			},
 			{
 				"enableFilter": false,
@@ -276,10 +295,12 @@
 				"fieldPos": 11,
 				"type": "ObjectNumber",
 				"editable": true,
+				"width": "",
 				"numberUnitType": "Fixed",
 				"numberUnitFixed": "EUR",
 				"hAlign": "End",
-				"formatter": "number03"
+				"formatter": "number03",
+				"vAlign": ""
 			},
 			{
 				"enableFilter": false,
@@ -290,6 +311,7 @@
 				"fieldPos": 12,
 				"type": "CheckBox",
 				"editable": false,
+				"vAlign": "",
 				"hAlign": "Center"
 			},
 			{
@@ -307,12 +329,15 @@
 					"keyField": [
 						{
 							"fieldName": "name",
-							"key": "Status"
+							"key": "Status",
+							"value": ""
 						}
 					],
 					"hideKey": true,
 					"butType": "Accept"
 				},
+				"width": "",
+				"vAlign": "",
 				"enableGroup": true
 			},
 			{
@@ -321,7 +346,9 @@
 				"visible": true,
 				"name": "Plant",
 				"text": "Plant",
-				"fieldPos": 14
+				"fieldPos": 14,
+				"width": "",
+				"vAlign": ""
 			},
 			{
 				"enableFilter": true,
@@ -330,7 +357,8 @@
 				"name": "CostCentre",
 				"text": "Cost Centre",
 				"fieldPos": 15,
-				"wrapping": true
+				"wrapping": true,
+				"vAlign": ""
 			},
 			{
 				"enableFilter": false,
@@ -339,7 +367,9 @@
 				"name": "updatedAt",
 				"text": "Updated At",
 				"fieldPos": 16,
-				"formatter": "date01"
+				"formatter": "date01",
+				"width": "",
+				"vAlign": ""
 			},
 			{
 				"enableFilter": true,
@@ -347,23 +377,37 @@
 				"visible": true,
 				"name": "updatedBy",
 				"text": "Updated By",
-				"fieldPos": 17
+				"fieldPos": 17,
+				"width": "",
+				"vAlign": ""
 			}
 		],
 		"defaultVariant": {
 			"id": "1708eaea-d54a-4cec-946f-bc6db95e24d4",
 			"colOrder": "key_a_to_z",
 			"rowOrder": "key_a_to_z",
+			"row": [],
+			"column": [],
+			"val": [],
 			"inclusions": {},
 			"exclusions": {}
 		}
 	},
 	"name": "demandboard_items_list_approver",
+	"description": "",
+	"group": "",
 	"type": "C",
 	"connectorid": "80f27a62-bc75-48a3-a07f-cb9177cedb43",
+	"scriptSel": null,
+	"scriptRun": null,
+	"tableid": null,
 	"ver": "22.11.6.1913",
 	"disabled": false,
 	"appType": "A",
 	"application": "planet9_adaptive_list",
-	"package": "b72e9368-0709-4465-97a6-5be01b90e3f0"
+	"package": "b72e9368-0709-4465-97a6-5be01b90e3f0",
+	"roles": [],
+	"scriptSelObj": null,
+	"scriptRunObj": null,
+	"tableObj": null
 }
