--- a/artifacts/Tile/Demand Board: Items Approver.json
+++ b/artifacts/Tile/Demand Board: Items Approver.json
@@ -2,6 +2,7 @@
 	"id": "ab5273fa-3869-4813-8469-722a55d31b94",
 	"createdAt": "2022-11-05T11:57:35.000Z",
 	"createdBy": "ole-andre.haugen@neptune-software.com",
+	"translation": [],
 	"storeItem": {},
 	"settings": {
 		"adaptive": {
@@ -11,12 +12,25 @@
 	},
 	"title": "Demand Board",
 	"subTitle": "Approvers",
+	"description": null,
+	"categoryID": null,
+	"sort": null,
+	"urlApplication": null,
+	"actionApplication": "",
+	"actionParameters": null,
+	"actionURL": "",
 	"openDialog": false,
 	"openWindow": false,
 	"openFullscreen": true,
 	"forceRow": false,
+	"frameType": null,
+	"type": "",
 	"image": "/media/root/demandboard/mb_image_03.png",
 	"icon": "sap-icon://request",
+	"backgroundType": null,
+	"backgroundColor": null,
+	"backgroundShade": null,
+	"tileApplication": null,
 	"hideHeaderL": false,
 	"hideHeaderM": false,
 	"hideHeaderS": false,
@@ -26,17 +40,46 @@
 	"enableDocumentation": false,
 	"navObject": "demandboard",
 	"navAction": "itemsapprove",
+	"dialogWidth": null,
+	"dialogHeight": null,
+	"tileApplicationStyleClass": null,
+	"sidepanelApp": null,
+	"sidepanelTitle": null,
+	"tags": "",
+	"actiongroup": null,
+	"styleClass": null,
+	"titleAlignment": null,
+	"titleLevel": null,
+	"dataUrl": null,
+	"dataInterval": null,
+	"footer": null,
+	"browserBlockWin": null,
+	"browserBlockMac": null,
 	"blackoutEnabled": false,
+	"blackoutText": null,
+	"blackoutDescription": null,
+	"helpText": null,
 	"helpEnabled": false,
 	"openClickTile": false,
 	"ver": "22.11.6.134",
+	"actionWebApp": "",
 	"name": "Demand Board: Items Approver",
+	"cardWidth": "",
 	"cardHeight": "Tall",
 	"cardHeightFit": false,
+	"cardImage": null,
+	"cardButtonIcon": null,
 	"cardButtonIconOnly": false,
+	"imagePlacement": null,
+	"imageRepeat": null,
+	"imageSize": null,
 	"imagePosition": "top",
+	"openText": null,
 	"imageHeight": "220px",
 	"bodyHeight": "400px",
+	"roleTag": null,
+	"sapICFNode": null,
 	"actionType": "F",
-	"package": "b72e9368-0709-4465-97a6-5be01b90e3f0"
+	"package": "b72e9368-0709-4465-97a6-5be01b90e3f0",
+	"roles": []
 }
